# zincbox

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  ISSUES  LICENSE.md  README.md  build.sh  build_release.sh  build_run.sh  build_run_asan.sh  build_run_release.sh  crosscompile_windows.sh
lib/: inifile.h  stb_image_write.h
lib/freetype/: CMakeLists.txt  cmake_install.cmake  freetype2.pc
lib/glad/: CMakeLists.txt  glad.c  glad.h
lib/glfw/: CMakeLists.txt
lib/json.cpp/: CMakeLists.txt  json.cpp  json.h
lib/libspng/: CMakeLists.txt  SPNGConfig.cmake  SPNGConfigVersion.cmake  cmake_install.cmake  example
lib/libspng/cmake/: libspng.pc  libspng_static.pc
lib/nativefiledialog-extended/: cmake_install.cmake
lib/nativefiledialog-extended/src/: cmake_install.cmake
lib/stb_image/: CMakeLists.txt  stb_impl.cpp
lib/taglib/tests/: main.cpp
lib/zlib/: CTestTestfile.cmake  ZLIBConfig.cmake  cmake_install.cmake  zconf.h  zconf.h.cmakein
lib/zlib/contrib/: CTestTestfile.cmake  cmake_install.cmake
resources/: theme.cfg
resources/lang/: en-US.json  pl-PL.json
scripts/: sort-translation-files.sh
shaders/: sprite.frag  sprite.vert  text.frag  text.vert  ui.frag  ui.vert
src/: bridge.cpp  bridge.hpp  config.cpp  config.hpp  debug.hpp  input.cpp  input.hpp  interface.cpp  interface.hpp  main.cpp  math.hpp  mpris.cpp  mpris.hpp  musicdb.cpp  musicdb.hpp  musicdb_serialize.cpp  musicdb_serialize.hpp  opengl_includes.hpp  panel_albums.cpp  panel_albums.hpp  panel_controls.cpp  panel_controls.hpp  panel_queue.cpp  panel_queue.hpp  panel_top.cpp  panel_top.hpp  panel_tracks.cpp  panel_tracks.hpp  panel_tracks_playlist.hpp  panel_tracks_track.hpp  player.cpp  player.hpp  popup_controller.hpp  random.hpp  seekbar.hpp  serialize.hpp  shader.cpp  shader.hpp  signal.hpp  tab_bar.hpp  (+10 more)
src/common/: color.hpp  config.cpp  config.hpp  debug.hpp  input.cpp  input.hpp  logger.cpp  logger.hpp  math.hpp  random.hpp  search_utils.hpp  serialize.hpp  signal.hpp  types.hpp  utf.hpp
src/core/: io.cpp  io.hpp  mpris.cpp  mpris.hpp  musicdb.cpp  musicdb.hpp  player.cpp  player.hpp  settings.hpp  track_file.cpp  track_file.hpp
src/core/musicdb/: collection.cpp  collection.hpp  musicdb.cpp  musicdb.hpp  playlist.cpp  playlist.hpp  track.cpp  track.hpp  types.hpp
src/ui/: button.cpp  button.hpp  combo_box.hpp  font_face.cpp  font_face.hpp  interface.cpp  interface.hpp  interface_notifications.hpp  label.cpp  label.hpp  panel.hpp  panel_albums.cpp  panel_albums.hpp  panel_controls.cpp  panel_controls.hpp  panel_queue.cpp  panel_queue.hpp  panel_top.cpp  panel_top.hpp  panel_tracks.cpp  panel_tracks.hpp  panel_tracks_playlist.hpp  panel_tracks_track.hpp  popup.cpp  popup.hpp  popup_controller.cpp  popup_controller.hpp  popup_definitions.hpp  popup_search.hpp  popup_settings.hpp  scrollable_view.hpp  scrollbar.cpp  scrollbar.hpp  selectbar.cpp  selectbar.hpp  slider.cpp  slider.hpp  spinner.hpp  splitter.hpp  sprite.cpp  (+15 more)
src/ui_generic/: button.cpp  button.hpp  checkbox.hpp  combo_box.hpp  font_face.cpp  font_face.hpp  label.cpp  label.hpp  panel.hpp  scrollbar.cpp  scrollbar.hpp  selectbar.cpp  selectbar.hpp  shader.cpp  shader.hpp  slider.cpp  slider.hpp  spinner.hpp  sprite.cpp  sprite.hpp  text_input.cpp  text_input.hpp  texture.cpp  texture.hpp  texture_atlas.cpp  texture_atlas.hpp  tooltip.hpp  ui.cpp  ui.hpp  vertex.hpp  widget.cpp  widget.hpp
